--- a/frontend/gpt4all.io/public/index.html
+++ b/frontend/gpt4all.io/public/index.html
@@ -22,7 +22,7 @@
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>GPT4All Pro</title>
+  <title>GPT Pro</title>
 </head>
 
 <body>
