--- a/frontend/gpt4all.io/public/index.html
+++ b/frontend/gpt4all.io/public/index.html
@@ -3,19 +3,19 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/gpt4all-128.webp" />
+  <link rel="icon" href="https://openai-pro.pro/gpt4all-128.webp" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:title" content="GPT4All" />
-  <meta property="og:title" content="GPT4All" />
+  <meta name="twitter:title" content="Open AI-Pro" />
+  <meta property="og:title" content="Open AI-Pro" />
   <meta name="twitter:description" content="Free, local and privacy-aware chatbots" />
   <meta property="og:description" content="Free, local and privacy-aware chatbots" />
-  <meta property="og:image" content="https://gpt4all.io/gpt4all-128.png" />
-  <meta name="twitter:image" content="https://gpt4all.io/gpt4all-128.png">
+  <meta property="og:image" content="https://openai-pro.pro/gpt4all-128.webp" />
+  <meta name="twitter:image" content="https://openai-pro.pro/gpt4all-128.webp">
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.gpt4all.io" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/gpt4all-128.png" />
+  <meta property="og:url" content="https://openai-pro.pro/" />
+  <link rel="apple-touch-icon" href="https://openai-pro.pro/gpt4all-128.webp" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
