--- a/frontend/gpt4all.io/public/index.html
+++ b/frontend/gpt4all.io/public/index.html
@@ -9,8 +9,16 @@
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Open AI-Pro" />
   <meta property="og:title" content="Open AI-Pro" />
-  <meta name="twitter:description" content="Free, local and privacy-aware chatbots" />
-  <meta property="og:description" content="Free, local and privacy-aware chatbots" />
+  <meta name="twitter:description" content="Introducing our Private AI Assistant:
+  Complete data security and privacy with our locally-run chatbot. 
+  No online risks or maintenance fees.
+  Lifelong access for a one-time affordable fee of 8640€.
+  Take back control of your data today." />
+  <meta property="og:description" content="Introducing our Private AI Assistant:
+  Complete data security and privacy with our locally-run chatbot. 
+  No online risks or maintenance fees.
+  Lifelong access for a one-time affordable fee of 8640€.
+  Take back control of your data today." />
   <meta property="og:image" content="https://openai-pro.pro/gpt4all-128.webp" />
   <meta name="twitter:image" content="https://openai-pro.pro/gpt4all-128.webp">
   <meta property="og:type" content="website" />
